* fixes in pulse cal handling: better logic in closing files, some improvements in code clarity and some minor performance improvements.
  - this fixes a bad bug when number of jobs is large; max number of file descriptors got exceeded.
* print MJD range of converted output
* add utility plotpcal
* update pulse cal: Use new, more natural format for .difx/PCAL* files made by mpifxcorr

Version 3.3.0
* Improved clarity in generation of Flag, Tsys, Pcal, Gain and Weather tables: prioritized sources of data
* Fix off-by-one timestamp error in the sniffer output files
* All times are UTC (always have been).  Change variables and comments to reflect this and avoid some confusion.
* Add utility to show which sources of calibration data (GN, PH, FG, WX, TS) will be used by difx2fits (called showcal)
* Version for DiFX-2.3, Dec 20, 2013

Version 3.2.0
* Fix for correlation of mismatched sidebands.  Requires contemporaneous
upgrade of difxio.
* Add DIFX_LABEL env var to FITS files
* Make sniffer plots more consistent with AIPS.  They will always show USB now and should have the same phase sense.
* Use the SX gain table rows when SX observing is used.  Thanks to James Miller-Jones for reporting the problem.
* pcal, weather, tsys, and flag files could be compromized by observations spanning the new year.
  - Now handle day of year jumps
  - Also handle possible use of mjds rather than days of year in future
* increase number of phase cal tones allowed
* Version for DiFX-2.2, 31 May 2013

Version 3.1.0
* Version renumber from 3.0.2 prior to DiFX-2.1 release
* Version for DiFX-2.1, 4 May 2012

Version 3.0.2
* Post DiFX-2.0.1
* Improved reporting when weights go crazy (negative)
* --zero (or -0) option: don't write visibilities (well, write one per input file)
  - not useful for AIPS as AIPS requires a UV table
* makefits: pass along non-dashed options to difx2fits
* Do better job verifying baseband data files have compliant names.
* Improved checking on fopen return values